--- a/5-haloprogiot/hpiot3.html
+++ b/5-haloprogiot/hpiot3.html
@@ -7,6 +7,7 @@
 
     <title>Hálózat programozása és IoT</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,17 +35,45 @@
         <h1>Hálózatok programozása (4+26 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók betekintést nyerjenek, illetve alapszintű gyakorlatot szerezzenek a hálózatok programozása területén. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Ismeri a hálózatok dinamikus kialakítását és konfigurálását lehetővé tévő szoftver által definiált hálózat (SDN, Software Defined Network), illetve modellalapú programozás (Model Driven Programmability) alapelvét.</li>
-          <li>Érti a YANG-adatmodellt használó RESTCONF- és NETCONF-protokollok célját.</li>
-          <li>Képes YANG-adatmodell integrálására és használatára Python programban.</li>
-          <li>Képes Python programban RESTCONF- és NETCONF-protokollokat használva hálózati eszközök dinamikus konfigurációját elvégezni.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a hálózatok dinamikus kialakítását és konfigurálását lehetővé tévő szoftver által definiált hálózat (SDN, Software Defined Network), illetve modellalapú programozás (Model Driven Programmability) alapelvét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a YANG-adatmodellt használó RESTCONF- és NETCONF-protokollok célját.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes YANG-adatmodell integrálására és használatára Python programban.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Python programban RESTCONF- és NETCONF-protokollokat használva hálózati eszközök dinamikus konfigurációját elvégezni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
