--- a/ptthalo/halo24.html
+++ b/ptthalo/halo24.html
@@ -41,24 +41,105 @@
         <h1>Statikus és dinamikus címfordítás lehetőségei (5+20 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megértsék a címfordítás szükségességét, típusait, és legyenek képesek statikus és dinamikus címfordítás megvalósítására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van az IPv4-címfordítás (NAT) szükségességével. Ismeri a címfordítás előnyeit és hátrányait.</li>
-          <li>Ismeri a címfordítás nyújtotta lehetőségeket, és ismeri a címfordítás fajtáit (statikus címfordítás, dinamikus címfordítás, portcímfordítás, porttovábbítás).</li>
-          <li>Tisztában van a címfordítás fajtái közötti különbségekkel.</li>
-          <li>Tisztában van a címfordításhoz kapcsolódó címek négy típusával (belső helyi cím, belső globális cím, külső helyi cím, külső globális cím).</li>
-          <li>Képes a megfelelő címfordítási típus kiválasztására.</li>
-          <li>Képes a belső és külső hálózat határának megállapítására.</li>
-          <li>Képes annak megállapítására, hogy melyik eszközön szükséges címfordítás kialakítása.</li>
-          <li>Képes statikus címfordítás konfigurálására, ellenőrzésére és hibaelhárítására.</li>
-          <li>Képes dinamikus címfordítás konfigurálására, ellenőrzésére és hibaelhárítására.</li>
-          <li>Képes túlterheléses dinamikus címfordítás vagy portcímfordítás (PAT) konfigurálására, ellenőrzésére és hibaelhárítására.</li>
-          <li>Képes port továbbítás konfigurálására, ellenőrzésére és hibaelhárítására.</li>
-          <li>Képes a címfordítási tábla (NAT-tábla) megjelenítésére, ellenőrzésére, kiürítésére. Érti a NAT-táblában szereplő bejegyzéseket.</li>
-          <li>Szimulációs szoftver segítségével végig tudja kísérni egy címfordítást használó adatcsomag harmadik rétegbeli fejlécének változását.</li>
-        </ul>
 
         <div class="dropdown">
-          <button class="dropdown-btn"></button>
+          <button class="dropdown-btn">Tisztában van az IPv4-címfordítás (NAT) szükségességével. Ismeri a címfordítás előnyeit és hátrányait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a címfordítás nyújtotta lehetőségeket, és ismeri a címfordítás fajtáit (statikus címfordítás, dinamikus címfordítás, portcímfordítás, porttovábbítás).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a címfordítás fajtái közötti különbségekkel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a címfordításhoz kapcsolódó címek négy típusával (belső helyi cím, belső globális cím, külső helyi cím, külső globális cím).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a megfelelő címfordítási típus kiválasztására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a belső és külső hálózat határának megállapítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes annak megállapítására, hogy melyik eszközön szükséges címfordítás kialakítása.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes statikus címfordítás konfigurálására, ellenőrzésére és hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes dinamikus címfordítás konfigurálására, ellenőrzésére és hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes túlterheléses dinamikus címfordítás vagy portcímfordítás (PAT) konfigurálására, ellenőrzésére és hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes port továbbítás konfigurálására, ellenőrzésére és hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a címfordítási tábla (NAT-tábla) megjelenítésére, ellenőrzésére, kiürítésére. Érti a NAT-táblában szereplő bejegyzéseket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Szimulációs szoftver segítségével végig tudja kísérni egy címfordítást használó adatcsomag harmadik rétegbeli fejlécének változását.</button>
           <div class="dropdown-content">
             <p>Ez az első panel tartalma.</p>
             <p>További szöveg itt.</p>
