--- a/ptthalo/halo25.html
+++ b/ptthalo/halo25.html
@@ -41,24 +41,105 @@
         <h1>WAN-technológiák (5+20 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók ismerjék a WAN-hálózatokra fókuszálva a technológiák, a hálózatokban szükséges eszközök és alkalmazások telepítésének, üzemeltetésének elméleti alapjait és gyakorlati megvalósításait. A tanulók ismerjék meg a WAN-ok esetén használt második rétegbeli protokollokat, és ismerjék meg a WAN-okban használt forgalomirányítás alapjait és gyakorlati megvalósítását. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van a WAN- és az OSI-modell kapcsolatával. Érti a WAN fogalmát, használatának célját.</li>
-          <li>Ismeri a WAN-összetevőket és -eszközöket.</li>
-          <li>Érti a WAN működését, üzemeltetését.</li>
-          <li>Képes megállapítani a LAN és a WAN határát.</li>
-          <li>Ismeri a publikus és privát WAN-technológiákat, képes azok összehasonlítására és adott szempontok szerint a legmegfelelőbb technológia kiválasztására.</li>
-          <li>Tisztában van a soros pont-pont kapcsolat kommunikációs szabványaival.</li>
-          <li>Ismeri a PPP-protokoll működését, lehetőségeit.</li>
-          <li>Adatforgalom elfogására alkalmas szoftverrel képes PPP-keret elfogására, és ismeri a keret fejlécének részéit.</li>
-          <li>Képes forgalomirányítók között PPP-kapcsolat kialakítására, ellenőrzésére, hibaelhárítására.</li>
-          <li>Képes PPP-kapcsolaton hitelesítés (PAP, CHAP) használatára. Érti a hitelesítési módok működését, és tisztában van a két hitelesítési mód közötti különbségekkel.</li>
-          <li>Képes PPP-kapcsolaton konfigurált hitelesítés működésének ellenőrzésére, hibaelhárítására.</li>
-          <li>Tisztában van az eBGP forgalomirányító protokoll szerepével, fontosabb tulajdonságaival, működésével.</li>
-          <li>Képes az eBGP-protokoll alapszintű konfigurálására.</li>
-        </ul>
 
         <div class="dropdown">
-          <button class="dropdown-btn"></button>
+          <button class="dropdown-btn">Tisztában van a WAN- és az OSI-modell kapcsolatával. Érti a WAN fogalmát, használatának célját.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a WAN-összetevőket és -eszközöket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a WAN működését, üzemeltetését.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes megállapítani a LAN és a WAN határát.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a publikus és privát WAN-technológiákat, képes azok összehasonlítására és adott szempontok szerint a legmegfelelőbb technológia kiválasztására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a soros pont-pont kapcsolat kommunikációs szabványaival.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a PPP-protokoll működését, lehetőségeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Adatforgalom elfogására alkalmas szoftverrel képes PPP-keret elfogására, és ismeri a keret fejlécének részéit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítók között PPP-kapcsolat kialakítására, ellenőrzésére, hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes PPP-kapcsolaton hitelesítés (PAP, CHAP) használatára. Érti a hitelesítési módok működését, és tisztában van a két hitelesítési mód közötti különbségekkel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes PPP-kapcsolaton konfigurált hitelesítés működésének ellenőrzésére, hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az eBGP forgalomirányító protokoll szerepével, fontosabb tulajdonságaival, működésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az eBGP-protokoll alapszintű konfigurálására.</button>
           <div class="dropdown-content">
             <p>Ez az első panel tartalma.</p>
             <p>További szöveg itt.</p>
