--- a/ptthalo/halo26.html
+++ b/ptthalo/halo26.html
@@ -41,25 +41,113 @@
         <h1>Virtuális magánhálózat (VPN) kialakítása (15+30 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a virtuális magánhálózat (VPN) működését, használatának előnyeit és fajtáit. A tanulók legyenek képesek Site-to-site és Remote-access VPN konfigurálására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van a virtuális magánhálózat szükségességével, szerepével, alapvető funkcióival.</li>
-          <li>Érti a virtuális magánhálózat nyújtotta lehetőségeket, előnyeit és hátrányait.</li>
-          <li>Ismeri a legelterjedtebb VPN-technológiákat (Remote-Access VPN, Site-to-Site VPN).</li>
-          <li>Ismeri az IPSec-technológiát, érti az IPSec-keretrendszer működését, összetevőit.</li>
-          <li>Tisztában van a Remote-Access VPN nyújtotta lehetőségekkel, alkalmazási területeivel.</li>
-          <li>Ismeri a Remote-Access VPN összetevőit.</li>
-          <li>Képes Remote-Access VPN-konfigurálásra forgalomirányítón.</li>
-          <li>Képes Remote-Access VPN-kapcsolat kialakítására végberendezésen.</li>
-          <li>Ismeri a Remote-Access VPN-kapcsolat ellenőrzéséhez ajánlott parancsokat, és képes azok megfelelő használatával a Remote-Access VPN-kapcsolat működésének ellenőrzésére.</li>
-          <li>Tisztában van a Site-to-Site VPN nyújtotta lehetőségekkel, alkalmazási területeivel.</li>
-          <li>Ismeri a Site-to-Site VPN összetevőit.</li>
-          <li>Képes Site-to-Site VPN-konfigurálásra forgalomirányítón.</li>
-          <li>Képes Site-to-Site VPN-kapcsolat kialakítására forgalomirányítók között.</li>
-          <li>Ismeri a Site-to-Site VPN-kapcsolat ellenőrzéséhez ajánlott parancsokat, és képes azok megfelelő használatával a Site-to-Site VPN-kapcsolat működésének ellenőrzésére.</li>
-        </ul>
 
         <div class="dropdown">
-          <button class="dropdown-btn"></button>
+          <button class="dropdown-btn">Tisztában van a virtuális magánhálózat szükségességével, szerepével, alapvető funkcióival.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a virtuális magánhálózat nyújtotta lehetőségeket, előnyeit és hátrányait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a legelterjedtebb VPN-technológiákat (Remote-Access VPN, Site-to-Site VPN).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az IPSec-technológiát, érti az IPSec-keretrendszer működését, összetevőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a Remote-Access VPN nyújtotta lehetőségekkel, alkalmazási területeivel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Remote-Access VPN összetevőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Remote-Access VPN-konfigurálásra forgalomirányítón.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Remote-Access VPN-kapcsolat kialakítására végberendezésen.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Remote-Access VPN-kapcsolat ellenőrzéséhez ajánlott parancsokat, és képes azok megfelelő használatával a Remote-Access VPN-kapcsolat működésének ellenőrzésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a Site-to-Site VPN nyújtotta lehetőségekkel, alkalmazási területeivel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Site-to-Site VPN összetevőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Site-to-Site VPN-konfigurálásra forgalomirányítón.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Site-to-Site VPN-kapcsolat kialakítására forgalomirányítók között.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Site-to-Site VPN-kapcsolat ellenőrzéséhez ajánlott parancsokat, és képes azok megfelelő használatával a Site-to-Site VPN-kapcsolat működésének ellenőrzésére.</button>
           <div class="dropdown-content">
             <p>Ez az első panel tartalma.</p>
             <p>További szöveg itt.</p>
