--- a/ptthalo/halo27.html
+++ b/ptthalo/halo27.html
@@ -41,44 +41,265 @@
         <h1>Minőségbiztosítási alapok, hálózatfelügyelet megvalósítása (15+26 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók alapszintű ismereteket szerezzenek a minőségbiztosítás területén, elsajátítsák a hálózatmonitorozás és a hálózatfelügyelet elméleti alapjait és gyakorlati megvalósításait. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Érti, hogy a hálózati forgalom milyen hatással van az átvitel minőségére.</li>
-          <li>Képes meghatározni a különböző típusú forgalom (hang, adat, videó) számára szükséges minimális hálózati követelményeket.</li>
-          <li>Ismeri a hálózati eszközök által használt, sorba rendező algoritmusokat.</li>
-          <li>Ismeri a különböző szolgáltatásminőségi (QoS) modelleket.</li>
-          <li>Tisztában van azzal, hogy a QoS által használt mechanizmusok hogyan biztosítják az átvitel megfelelő minőségét.</li>
-          <li>Képes alapszintű QoS konfigurálására forgalomirányítón.</li>
-          <li>Ismer legalább egy második rétegbeli protokollt, mely képes a szomszédos eszközök felfedezésére (CDP, LLDP).</li>
-          <li>Tisztában van a hálózatfelderítő protokollok működésével, használatuk előnyeivel, hátrányaival.</li>
-          <li>Képes az általa ismert hálózatfelderítő protokoll konfigurálására és használatára.</li>
-          <li>Képes az általa ismert hálózatfelderítő protokoll használatával a hálózat feltérképezésére.</li>
-          <li>Ismeri a Network Time Protocol (NTP) működését, szerepét. Tisztában van az NTP használatának szükségességével.</li>
-          <li>Képes forgalomirányítót NTP-szerverként és NTP-kliensként konfigurálni.</li>
-          <li>Képes két eszköz között NTP-kliens és NTP-szerver-kapcsolatot kialakítani.</li>
-          <li>Képes hitelesítést alkalmazni az NTP-protokoll használata során.</li>
-          <li>Képes megjeleníteni az NTP működésének állapotát forgalomirányítón.</li>
-          <li>Képes NTP esetén hibaelhárítást végezni.</li>
-          <li>Ismeri a Simple Network Management Protocol (SNMP) működését, szerepét, használatának lehetőségeit.</li>
-          <li>Tisztában van az SNMP esetén előforduló fogalmak jelentésével (SNMP manager, SNMP agent, MIB, trap).</li>
-          <li>Ismeri az SNMP-verziókat, tisztában van a köztük lévő főbb különbségekkel.</li>
-          <li>Képes forgalomirányítón SNMP alapszintű konfigurálására. Képes az SNMP használatára, segítségével konfigurációs adatok lekérdezésére, módosítására.</li>
-          <li>Ismeri a Syslog-protokoll működését, szerepét. Tisztában van a Syslog-protokoll által használt üzenetformátummal. Ismeri a súlyossági szinteket, és tudja azok jelentését.</li>
-          <li>Képes forgalomirányítón Syslog konfigurálására. Képes Syslog-szerverként funkcionáló eszközön nyomon követni a forgalomirányító által küldött naplóüzeneteket. Képes ezekben az üzenetekben szűrést, keresést, rendezést végrehajtani.</li>
-          <li>Ismeri a NetFlow-protokoll működését, szerepét, verzióit. Tisztában van a NetFlow által használt adatfolyam jelentésével.</li>
-          <li>Képes forgalomirányítón NetFlow konfigurálására, ellenőrzésére, forgalmi statisztika megjelenítésére.</li>
-          <li>Ismeri a kapcsolók és forgalomirányítók által használt konfigurációk fajtáit (kezdeti konfiguráció, futó konfiguráció). Tisztában van ezek szerepével, tárolási helyével.</li>
-          <li>Ismeri a TFTP-protokoll működését, képes annak használatára.</li>
-          <li>Képes forgalomirányító és kapcsoló futó, illetve kezdeti konfigurációjának mentésére, külső szerverre történő mentésére TFTP-protokoll használatával.</li>
-          <li>Képes forgalomirányító és kapcsoló futó, illetve kezdeti konfigurációjának helyreállítására, visszaállítására TFTP-protokoll használatával.</li>
-          <li>Ismeri az IOS fogalmát, szerepét, tárolási helyét, működés közbeni tárolási helyét.</li>
-          <li>Tisztában van a különböző IOS-verziókkal, és ismeri az aktuális IOS-verzió jellemzőit, sajátosságait.</li>
-          <li>Képes forgalomirányítón és kapcsolón IOS-frissítés végrehajtására.</li>
-          <li>Ismeri a jelszóhelyreállítás lépéseit forgalomirányítón és kapcsolón.</li>
-          <li>Képes jelszóhelyreállítást végezni forgalomirányítón és kapcsolón.</li>
-        </ul>
 
         <div class="dropdown">
-          <button class="dropdown-btn"></button>
+          <button class="dropdown-btn">Érti, hogy a hálózati forgalom milyen hatással van az átvitel minőségére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes meghatározni a különböző típusú forgalom (hang, adat, videó) számára szükséges minimális hálózati követelményeket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a hálózati eszközök által használt, sorba rendező algoritmusokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a különböző szolgáltatásminőségi (QoS) modelleket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van azzal, hogy a QoS által használt mechanizmusok hogyan biztosítják az átvitel megfelelő minőségét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes alapszintű QoS konfigurálására forgalomirányítón.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismer legalább egy második rétegbeli protokollt, mely képes a szomszédos eszközök felfedezésére (CDP, LLDP).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hálózatfelderítő protokollok működésével, használatuk előnyeivel, hátrányaival.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az általa ismert hálózatfelderítő protokoll konfigurálására és használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az általa ismert hálózatfelderítő protokoll használatával a hálózat feltérképezésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Network Time Protocol (NTP) működését, szerepét. Tisztában van az NTP használatának szükségességével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítót NTP-szerverként és NTP-kliensként konfigurálni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes két eszköz között NTP-kliens és NTP-szerver-kapcsolatot kialakítani.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes hitelesítést alkalmazni az NTP-protokoll használata során.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes megjeleníteni az NTP működésének állapotát forgalomirányítón.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes NTP esetén hibaelhárítást végezni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Simple Network Management Protocol (SNMP) működését, szerepét, használatának lehetőségeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az SNMP esetén előforduló fogalmak jelentésével (SNMP manager, SNMP agent, MIB, trap).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az SNMP-verziókat, tisztában van a köztük lévő főbb különbségekkel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítón SNMP alapszintű konfigurálására. Képes az SNMP használatára, segítségével konfigurációs adatok lekérdezésére, módosítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Syslog-protokoll működését, szerepét. Tisztában van a Syslog-protokoll által használt üzenetformátummal. Ismeri a súlyossági szinteket, és tudja azok jelentését.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítón Syslog konfigurálására. Képes Syslog-szerverként funkcionáló eszközön nyomon követni a forgalomirányító által küldött naplóüzeneteket. Képes ezekben az üzenetekben szűrést, keresést, rendezést végrehajtani.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a NetFlow-protokoll működését, szerepét, verzióit. Tisztában van a NetFlow által használt adatfolyam jelentésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítón NetFlow konfigurálására, ellenőrzésére, forgalmi statisztika megjelenítésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a kapcsolók és forgalomirányítók által használt konfigurációk fajtáit (kezdeti konfiguráció, futó konfiguráció). Tisztában van ezek szerepével, tárolási helyével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a TFTP-protokoll működését, képes annak használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányító és kapcsoló futó, illetve kezdeti konfigurációjának mentésére, külső szerverre történő mentésére TFTP-protokoll használatával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányító és kapcsoló futó, illetve kezdeti konfigurációjának helyreállítására, visszaállítására TFTP-protokoll használatával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az IOS fogalmát, szerepét, tárolási helyét, működés közbeni tárolási helyét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a különböző IOS-verziókkal, és ismeri az aktuális IOS-verzió jellemzőit, sajátosságait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítón és kapcsolón IOS-frissítés végrehajtására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a jelszóhelyreállítás lépéseit forgalomirányítón és kapcsolón.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes jelszóhelyreállítást végezni forgalomirányítón és kapcsolón.</button>
           <div class="dropdown-content">
             <p>Ez az első panel tartalma.</p>
             <p>További szöveg itt.</p>
