--- a/ptthalo/ieta18.html
+++ b/ptthalo/ieta18.html
@@ -7,6 +7,7 @@
 
     <title>Informatikai és távközlési alapok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,17 +39,45 @@
         <h1>A dolgok internete</h1>
 
         <p>A témakör célja az IoT (dolgok internete) fogalmának és gyakorlati megvalósítási lehetőségeinek bemutatása. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Ismeri az IoT fogalmát, alkalmazási lehetőségeit, a szenzorok, mikrokontrollerek és beavatkozóelemek különböző típusait.</li>
-          <li>Képes prototípus készítésére a megvalósítandó IoT-projekthez.</li>
-          <li>Ismeri a Big Data és az automatizáció fogalmát.</li>
-          <li>Képes egyszerű IoT-projektek szimulációjára (Packet Tracerben) és megvalósítására valós eszközökkel (Arduino, Raspberry Pi).</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az IoT fogalmát, alkalmazási lehetőségeit, a szenzorok, mikrokontrollerek és beavatkozóelemek különböző típusait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes prototípus készítésére a megvalósítandó IoT-projekthez.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Big Data és az automatizáció fogalmát.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes egyszerű IoT-projektek szimulációjára (Packet Tracerben) és megvalósítására valós eszközökkel (Arduino, Raspberry Pi).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
