--- a/ptthalo/ieta21.html
+++ b/ptthalo/ieta21.html
@@ -7,6 +7,7 @@
 
     <title>Informatikai és távközlési alapok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,20 +39,69 @@
         <h1>Informatikai és távközlési hálózatok napjainkban</h1>
 
         <p>A témakör célja annak bemutatása, mire használhatók a távközlési hálózatok, illetve milyen aktuális és várható trendek figyelhetők meg ezen a területen. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Tisztában van a hálózat fogalmával, céljával. Ismeri a hálózatok legfontosabb alkotóelemeit.</li>
-          <li>Tisztában van a hálózatok mindennapjainkra gyakorolt hatásával.</li>
-          <li>Ismeri a fizikai és logikai topológia fogalmát, jellemzőit. Képes megkülönböztetni egymástól a fizikai és a logikai topológiát. Tudja értelmezni a topológiai ábrákat.</li>
-          <li>Ismeri a LAN-okban használható logikai topológiákat (sín, gyűrű, fa, csillag, kiterjesztett csillag) és ezek jellemzőit. Tisztában van a különböző topológiák előnyeivel és hátrányaival.</li>
-          <li>Tudja, mi szükséges az internethez való kapcsolódáshoz, képes csatlakozni a helyi hálózathoz és az internethez.</li>
-          <li>Tisztában van napjaink hálózati trendjeivel (BYOD, SDN stb.).</li>
-          <li>Tisztában van a hálózatokat érő fenyegetések és támadások veszélyeivel, érti a hálózatbiztonság szerepét, jelentőségét.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hálózat fogalmával, céljával. Ismeri a hálózatok legfontosabb alkotóelemeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hálózatok mindennapjainkra gyakorolt hatásával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a fizikai és logikai topológia fogalmát, jellemzőit. Képes megkülönböztetni egymástól a fizikai és a logikai topológiát. Tudja értelmezni a topológiai ábrákat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a LAN-okban használható logikai topológiákat (sín, gyűrű, fa, csillag, kiterjesztett csillag) és ezek jellemzőit. Tisztában van a különböző topológiák előnyeivel és hátrányaival.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, mi szükséges az internethez való kapcsolódáshoz, képes csatlakozni a helyi hálózathoz és az internethez.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van napjaink hálózati trendjeivel (BYOD, SDN stb.).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hálózatokat érő fenyegetések és támadások veszélyeivel, érti a hálózatbiztonság szerepét, jelentőségét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
