--- a/ptthalo/ieta22.html
+++ b/ptthalo/ieta22.html
@@ -7,6 +7,7 @@
 
     <title>Informatikai és távközlési alapok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,27 +39,125 @@
         <h1>Hálózati protokollok és modellek, végponti eszközök hálózati beállítása</h1>
 
         <p>A témakör célja, hogy a tanuló megismerje a leggyakrabban használt hálózati eszközöket és a rétegmodelleket, az átviteli közegek jellemzőit, valamint képes legyen Ethernet-kábel készítésére. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Ismeri a kommunikációs szabályok jelentőségét, szerepét. Tisztában van a protokollok jelentőségével, szükségességével.</li>
-          <li>Ismeri a referenciamodellek szerepét.</li>
-          <li>Tisztában van az OSI-modell jelentőségével, ismeri annak rétegeit, és a rétegek szerepét.</li>
-          <li>Tisztában van a TCP/IP-modell jelentőségével, ismeri annak rétegeit, és a rétegek szerepét.</li>
-          <li>Képes az OSI- és TCP/IP-modell egymásnak való megfeleltetésére.</li>
-          <li>Ismeri az adatbeágyazás fogalmát, szerepét. Tisztában van azzal, hogyan történik a helyi és a távoli erőforrások elérése a rétegmodellben.</li>
-          <li>Ismeri a fizikai réteg szerepét, feladatát. Tisztában van az adatok fizikai közegen történő átvitelének lehetőségeivel.</li>
-          <li>Ismeri a jelek továbbítási módjait (szinkron, aszinkron), a sávszélesség, az átbocsátóképesség és a késleltetés fogalmát. Képes végberendezésen a pillanatnyi átbocsátóképesség lekérdezésére.</li>
-          <li>Tisztában van a vezetékes hálózatban használható közegekkel (rézalapú, optikai kábelek), és ismeri ezek jellemzőit.</li>
-          <li>Tudja, hogy miért van szükség keresztkötésű és egyeneskötésű Ethernet-kábelre. Képes megállapítani, hogy adott eszközök között melyik típusú kábel (keresztkötésű, egyeneskötésű) használata szükséges.</li>
-          <li>Ismeri a TIA/EIA-568-A és a TIA/EIA-568-B színsorrendet, és ezek alapján képes keresztkötésű és egyeneskötésű Ethernet-kábel készítésére.</li>
-          <li>Ismeri a vezeték nélküli átviteli közegeket, és ezek jellemzőit, felhasználási területüket.</li>
-          <li>Képes vezetékes és vezeték nélküli hálózathoz csatlakoztatni a végberendezést.</li>
-          <li>Ismeri a decimális, bináris és hexadecimális számrendszert, és képes az ezen számrendszerek közti átváltásra.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a kommunikációs szabályok jelentőségét, szerepét. Tisztában van a protokollok jelentőségével, szükségességével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a referenciamodellek szerepét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az OSI-modell jelentőségével, ismeri annak rétegeit, és a rétegek szerepét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a TCP/IP-modell jelentőségével, ismeri annak rétegeit, és a rétegek szerepét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az OSI- és TCP/IP-modell egymásnak való megfeleltetésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az adatbeágyazás fogalmát, szerepét. Tisztában van azzal, hogyan történik a helyi és a távoli erőforrások elérése a rétegmodellben.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a fizikai réteg szerepét, feladatát. Tisztában van az adatok fizikai közegen történő átvitelének lehetőségeivel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a jelek továbbítási módjait (szinkron, aszinkron), a sávszélesség, az átbocsátóképesség és a késleltetés fogalmát. Képes végberendezésen a pillanatnyi átbocsátóképesség lekérdezésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a vezetékes hálózatban használható közegekkel (rézalapú, optikai kábelek), és ismeri ezek jellemzőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, hogy miért van szükség keresztkötésű és egyeneskötésű Ethernet-kábelre. Képes megállapítani, hogy adott eszközök között melyik típusú kábel (keresztkötésű, egyeneskötésű) használata szükséges.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a TIA/EIA-568-A és a TIA/EIA-568-B színsorrendet, és ezek alapján képes keresztkötésű és egyeneskötésű Ethernet-kábel készítésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a vezeték nélküli átviteli közegeket, és ezek jellemzőit, felhasználási területüket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes vezetékes és vezeték nélküli hálózathoz csatlakoztatni a végberendezést.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a decimális, bináris és hexadecimális számrendszert, és képes az ezen számrendszerek közti átváltásra.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
