--- a/ptthalo/ieta25.html
+++ b/ptthalo/ieta25.html
@@ -7,6 +7,7 @@
 
     <title>Informatikai és távközlési alapok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,30 +39,149 @@
         <h1>A szállítási és az alkalmazási réteg</h1>
 
         <p>A témakör célja a szállítási réteg két fő protokollja, a TCP és a UDP ismertetése. Bemutatja a TCP/IP-modell alkalmazási rétegének célját és a benne használt protokollokat, különös tekintettel a DNS- és DHCP-protokollokra, a webes és elektronikus levelezési, valamint fájlmegosztási protokollokra. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Tisztában van a szállítási réteg szerepével, érti a szállítási réteg feladatát, jelentőségét. Ismeri a szállítási réteg főbb protokolljait (TCP, UDP).</li>
-          <li>Ismeri a szegmens fogalmát, tisztában van a portszámok szerepével és három csoportjával (jól ismert portok, regisztrált portok, privát portok).</li>
-          <li>Ismeri a TCP-protokoll szerepét, jellemzőit, főbb alkalmazási területeit.</li>
-          <li>Ismeri az UDP-protokoll szerepét, jellemzőit, főbb alkalmazási területeit.</li>
-          <li>Tisztában van TCP- és az UDP-protokollok előnyeivel és hátrányaival.</li>
-          <li>Képes a TCP- és az UDP-protokollok összehasonlítására.</li>
-          <li>Ismeri a TCP kommunikációs folyamat által használt kapcsolat felépítésének (háromfázisú kézfogás) és lebontásának lépéseit.</li>
-          <li>Tisztában van a megbízható szállítás jelentőségével és az adatfolyam-vezérlés szerepével. Tudja, hogyan működik az adatfolyam-vezérlés TCP-protokoll esetén. Ismeri az ablakméret és a nyugtázás fogalmát.</li>
-          <li>Adatfolyam elfogására alkalmas szoftver segítségével képes a TCP-folyamat felépülésének és lebontásnak vizsgálatára.</li>
-          <li>Tisztában van a sorszámozás szerepével, és TCP esetén érti a sorszámok változását (sequence number, acknowledgement number).</li>
-          <li>Ismeri az alkalmazási, megjelenítési és viszonyréteg funkcióit.</li>
-          <li>Tisztában van az egyenrangú hálózat fogalmával, működésével, jelentőségével, előnyeivel és hátrányaival. Ismer olyan alkalmazásokat, amelyek egyenrangú hálózatokban használatosak.</li>
-          <li>Tisztában van a szerver-kliens alapú hálózat fogalmával, működésével, jelentőségével, előnyeivel és hátrányaival. Ismeri a jelentősebb szerver-kliens alapú alkalmazásokat.</li>
-          <li>Tisztában van a webszolgáltatás által használt HTTP- és HTTPS-protokoll jelentőségével, működésével.</li>
-          <li>Tisztában van a levelezési protokollokkal (SMTP, IMAP, POP3), azok működésével. Tisztában van az e-mail-letöltő protokollok közti különbséggel.</li>
-          <li>Ismeri a DHCP- és a DNS-protokollok szerepét, jelentőségét, működését.</li>
-          <li>Ismeri a fájlmegosztási protokollokat, tisztában van azok működésével.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a szállítási réteg szerepével, érti a szállítási réteg feladatát, jelentőségét. Ismeri a szállítási réteg főbb protokolljait (TCP, UDP).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a szegmens fogalmát, tisztában van a portszámok szerepével és három csoportjával (jól ismert portok, regisztrált portok, privát portok).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a TCP-protokoll szerepét, jellemzőit, főbb alkalmazási területeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az UDP-protokoll szerepét, jellemzőit, főbb alkalmazási területeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van TCP- és az UDP-protokollok előnyeivel és hátrányaival.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a TCP- és az UDP-protokollok összehasonlítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a TCP kommunikációs folyamat által használt kapcsolat felépítésének (háromfázisú kézfogás) és lebontásának lépéseit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a megbízható szállítás jelentőségével és az adatfolyam-vezérlés szerepével. Tudja, hogyan működik az adatfolyam-vezérlés TCP-protokoll esetén. Ismeri az ablakméret és a nyugtázás fogalmát.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Adatfolyam elfogására alkalmas szoftver segítségével képes a TCP-folyamat felépülésének és lebontásnak vizsgálatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a sorszámozás szerepével, és TCP esetén érti a sorszámok változását (sequence number, acknowledgement number).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az alkalmazási, megjelenítési és viszonyréteg funkcióit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az egyenrangú hálózat fogalmával, működésével, jelentőségével, előnyeivel és hátrányaival. Ismer olyan alkalmazásokat, amelyek egyenrangú hálózatokban használatosak.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a szerver-kliens alapú hálózat fogalmával, működésével, jelentőségével, előnyeivel és hátrányaival. Ismeri a jelentősebb szerver-kliens alapú alkalmazásokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a webszolgáltatás által használt HTTP- és HTTPS-protokoll jelentőségével, működésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a levelezési protokollokkal (SMTP, IMAP, POP3), azok működésével. Tisztában van az e-mail-letöltő protokollok közti különbséggel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a DHCP- és a DNS-protokollok szerepét, jelentőségét, működését.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a fájlmegosztási protokollokat, tisztában van azok működésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
