--- a/ptthalo/ieta26.html
+++ b/ptthalo/ieta26.html
@@ -7,6 +7,7 @@
 
     <title>Informatikai és távközlési alapok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,20 +39,69 @@
         <h1>Otthoni és kisvállalati hálózat építése és beállítása</h1>
 
         <p>A témakör célja, hogy a tanulók az eddigi ismereteik felhasználásával képesek legyenek otthoni és kivállalati hálózat összetevőinek azonosítására, kisméretű hálózat fizikai kiépítésére, IP-címzés beállítására, és az alapvető kapcsolódási hibák elhárításra. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Tisztában van az otthoni, illetve kisvállalti hálózatban használható eszközökkel, azok főbb jellemzőivel.</li>
-          <li>Képes azonosítani egy otthoni vagy kisvállalati hálózat összetevőit.</li>
-          <li>Képes azonosítani a kisvállalati hálózatban használt főbb protokollokat, alkalmazásokat.</li>
-          <li>Képes ping és traceroute parancsok használatával a kapcsolat működésének ellenőrzésére. Tudja értelmezni a válaszként megjelenő sorokban szereplő információkat.</li>
-          <li>Ismeri azokat a show parancsokat, amelyekkel lekérdezhető a hálózati eszköz futó és kezdeti konfigurációja, valamint az IOS-, illetve hardverösszetevők paraméterei.</li>
-          <li>Képes otthoni és irodai hálózat eszközeinek kiválasztására, összekötésére és az IPcímzés beállítására.</li>
-          <li>Ismeri az alapvető hálózati hibaelhárítás lépéseit, képes alapszintű kapcsolódási hibák megtalálására és elhárítására.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az otthoni, illetve kisvállalti hálózatban használható eszközökkel, azok főbb jellemzőivel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes azonosítani egy otthoni vagy kisvállalati hálózat összetevőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes azonosítani a kisvállalati hálózatban használt főbb protokollokat, alkalmazásokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes ping és traceroute parancsok használatával a kapcsolat működésének ellenőrzésére. Tudja értelmezni a válaszként megjelenő sorokban szereplő információkat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri azokat a show parancsokat, amelyekkel lekérdezhető a hálózati eszköz futó és kezdeti konfigurációja, valamint az IOS-, illetve hardverösszetevők paraméterei.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes otthoni és irodai hálózat eszközeinek kiválasztására, összekötésére és az IPcímzés beállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az alapvető hálózati hibaelhárítás lépéseit, képes alapszintű kapcsolódási hibák megtalálására és elhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
