--- a/5-haloprogiot/hpiot1.html
+++ b/5-haloprogiot/hpiot1.html
@@ -7,6 +7,7 @@
 
     <title>Hálózat programozása és IoT</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,15 +35,29 @@
         <h1>Programozási alapok Pythonban (4+16 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók felfrissítsék és kibővítsék a szakmai alapozás során a Programozási alapok tantárgy keretében megszerzett programozási ismereteiket és a Python nyelvben szerzett gyakorlati készségeiket. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Ismeri a gyakorlati tapasztalatok közösségi tudásmegosztásában (CoP, Communities of Practice) rejlő előnyöket, képes hatékonyan használni CoPforrásokat (pl. GitHub, Stack Overflow, Cisco DevNet), képes saját jó gyakorlatainak közösségi megosztására.</li>
-          <li>Képes Python-alkalmazás létrehozására, ismeri a Python nyelvi elemeit, alapvető moduljait, képes a nyelvi elemek felhasználásával felhasználói adatok feldolgozására, fájlok olvasására és írására.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a gyakorlati tapasztalatok közösségi tudásmegosztásában (CoP, Communities of Practice) rejlő előnyöket, képes hatékonyan használni CoPforrásokat (pl. GitHub, Stack Overflow, Cisco DevNet), képes saját jó gyakorlatainak közösségi megosztására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Python-alkalmazás létrehozására, ismeri a Python nyelvi elemeit, alapvető moduljait, képes a nyelvi elemek felhasználásával felhasználói adatok feldolgozására, fájlok olvasására és írására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
