--- a/5-haloprogiot/hpiot2.html
+++ b/5-haloprogiot/hpiot2.html
@@ -7,6 +7,7 @@
 
     <title>Hálózat programozása és IoT</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,14 +35,54 @@
         <h1>REST API kliensprogram készítése Pythonban (4+26 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a REST API architektúrát, és képesek legyenek egyszerű REST API kliens készítésére Pythonban, valamint a JSON-fájlok kezelésére, feldolgozására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Ismeri az API és a RESTful API fogalmát és célját.</li>
-          <li>Érti a webszolgáltatások során használt HTTP-kérések működését.</li>
-          <li>Ismeri a JSON- és XML-formátumok felépítését, képes JSON-formátumú adatok feldolgozására (parsing) Pythonban.</li>
-          <li>Képes publikus API-k dokumentációjának értelmezésére.</li>
-          <li>Képes Pythonban készített REST API kliens segítségével publikusan elérhető APIk használatára, a visszakapott adatok feldolgozására.</li>
-          <li>Ismeri a RESTful kérések legfontosabb authentikációs metódusait (basic, token, OAuth).</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az API és a RESTful API fogalmát és célját.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a webszolgáltatások során használt HTTP-kérések működését.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a JSON- és XML-formátumok felépítését, képes JSON-formátumú adatok feldolgozására (parsing) Pythonban.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes publikus API-k dokumentációjának értelmezésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Pythonban készített REST API kliens segítségével publikusan elérhető APIk használatára, a visszakapott adatok feldolgozására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a RESTful kérések legfontosabb authentikációs metódusait (basic, token, OAuth).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h3>Tech With Tim - Create A Python API in 12 Minutes</h3>
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/zsYIw6RXjfM?si=EMzT9Pshz89X7_Xo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
@@ -57,5 +98,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
