--- a/5-haloprogiot/hpiot4.html
+++ b/5-haloprogiot/hpiot4.html
@@ -7,6 +7,7 @@
 
     <title>Hálózat programozása és IoT</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,14 +35,54 @@
         <h1>IoT - a dolgok internete (4+24 óra)</h1>
 
         <p>A témakör célja, hogy betekintést adjon a dolgok internetének világába, valamint képessé tegye a tanulókat IoT-megvalósítások prototípusainak létrehozására, IoT-eszközök programozott beállítására szimulációs és valós eszközökkel (pl. Arduino, Rasberry Pi) egyaránt. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Érti a dolgok internetének kialakulásához vezető digitális transzformáció koncepcióját, a folyamatban rejlő lehetőségeket és kihívásokat.</li>
-          <li>Képes megtervezni és szimulációs eszköz segítségével lemodellezni egyszerű IoTmegoldásokat.</li>
-          <li>Képes megtervezni, illetve elektronikai alkatrészek, mikrokontrollerek (pl. Arduino) és hitelkártya méretű számítógépek (pl. Raspberry Pi) segítségével prototípusként megépíteni egyszerű IoT-megoldásokat.</li>
-          <li>Képes Python program segítségével összegyűjteni, feldolgozni, analizálni, vizualizálni és SQL-adatbázisban eltárolni szenzorokból származó adatokat.</li>
-          <li>Képes Python program segítségével befolyásolni az IoT-eszközök viselkedését.</li>
-          <li>Képes Python program segítségével az IoT-eszközöket felhőszolgáltatásokhoz kapcsolni API-kon keresztül.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a dolgok internetének kialakulásához vezető digitális transzformáció koncepcióját, a folyamatban rejlő lehetőségeket és kihívásokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes megtervezni és szimulációs eszköz segítségével lemodellezni egyszerű IoTmegoldásokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes megtervezni, illetve elektronikai alkatrészek, mikrokontrollerek (pl. Arduino) és hitelkártya méretű számítógépek (pl. Raspberry Pi) segítségével prototípusként megépíteni egyszerű IoT-megoldásokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Python program segítségével összegyűjteni, feldolgozni, analizálni, vizualizálni és SQL-adatbázisban eltárolni szenzorokból származó adatokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Python program segítségével befolyásolni az IoT-eszközök viselkedését.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Python program segítségével az IoT-eszközöket felhőszolgáltatásokhoz kapcsolni API-kon keresztül.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h3>Szenzorhálózatok és a tárgyak internete</h3>
         <p>Intelligens szenzorok és szenzorhálózatok és az Internet of Things kapcsolata. Intelligens szenzor hardver-architektúrák. Szenzorhálózati architektúrák. Szabványosítási törekvések: IEEE 802.15.4., ZigBee protokoll, Bluetooth LE. Tipikus szenzorhálózati alkalmazási területek, esettanulmányok (egészségügy, mérnöki alkalmazások, környezetvédelem, intelligens otthon, stb.).</p>
@@ -54,5 +95,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
