--- a/ptthalo/ieta23.html
+++ b/ptthalo/ieta23.html
@@ -7,6 +7,7 @@
 
     <title>Informatikai és távközlési alapok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,25 +39,109 @@
         <h1>Kapcsolás Ethernet hálózatokon, a kapcsoló alapszintű beállítása</h1>
 
         <p>A témakör feldolgozásával a tanulók megismerik az adatbeágyazás menetét, az Ethernet-technológia jellemzőit és a kapcsolók működési elvét. Cél, hogy elsajátítsák legalább egy terminálemulációs szoftver használatát, és elvégezzék a második rétegbeli kapcsoló alapkonfigurációját. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Tisztában van az adatbeágyazás fogalmával, működésével.</li>
-          <li>Képes az adatbeágyazás vizsgálatára adatforgalom elfogására alkalmas szoftver segítségével.</li>
-          <li>Ismeri az Ethernet-technológia jellemzőit, működési elvét, tisztában van az Ethernet-keret felépítésével.</li>
-          <li>Képes az Ethernet-keret fejlécelemeinek azonosítására, elfogott keret esetén adatforgalom elfogására alkalmas szoftverrel.</li>
-          <li>Tisztában van a MAC-cím jelentőségével, szerepével, felépítésével.</li>
-          <li>Képes a végberendezés hálózatikártya-információinak megjelenítésére, MACcímének lekérdezése.</li>
-          <li>Tisztában van a félduplex és a teljes duplex kommunikáció működésével.</li>
-          <li>Ismeri a kapcsoló felépítését, képes felismerni a kapcsoló összetevőit.</li>
-          <li>Tisztában van a kapcsoló feladatával, jelentőségével, működési elvével.</li>
-          <li>Ismeri a MAC-tábla fogalmát, szerepét. Tudja, hogyan kerülnek a bejegyzések a kapcsoló MAC-táblájába.</li>
-          <li>Ismeri a kapcsoló továbbítási módjait, tisztában van az elárasztásos továbbítás fogalmával, működésével.</li>
-          <li>Érti a MAC-táblában található bejegyzéseket, a MAC-tábla tartalma alapján képes eldönteni, hogy a kapcsoló mely portjain továbbítja az adott keretet.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az adatbeágyazás fogalmával, működésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az adatbeágyazás vizsgálatára adatforgalom elfogására alkalmas szoftver segítségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az Ethernet-technológia jellemzőit, működési elvét, tisztában van az Ethernet-keret felépítésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az Ethernet-keret fejlécelemeinek azonosítására, elfogott keret esetén adatforgalom elfogására alkalmas szoftverrel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a MAC-cím jelentőségével, szerepével, felépítésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a végberendezés hálózatikártya-információinak megjelenítésére, MACcímének lekérdezése.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a félduplex és a teljes duplex kommunikáció működésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a kapcsoló felépítését, képes felismerni a kapcsoló összetevőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a kapcsoló feladatával, jelentőségével, működési elvével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a MAC-tábla fogalmát, szerepét. Tudja, hogyan kerülnek a bejegyzések a kapcsoló MAC-táblájába.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a kapcsoló továbbítási módjait, tisztában van az elárasztásos továbbítás fogalmával, működésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a MAC-táblában található bejegyzéseket, a MAC-tábla tartalma alapján képes eldönteni, hogy a kapcsoló mely portjain továbbítja az adott keretet.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
