--- a/ptthalo/ieta27.html
+++ b/ptthalo/ieta27.html
@@ -7,6 +7,7 @@
 
     <title>Informatikai és távközlési alapok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,30 +39,149 @@
         <h1>IT-biztonság</h1>
 
         <p>A témakör a számítógépes biztonsággal foglalkozik. Célja, hogy a tanulók megismerjék a legfontosabb támadási módokat, a kártevők típusait és az azok elleni védekezést. Tudják, milyen hálózati támadások léteznek, milyen biztonsági irányelveket kell követni az adatok védelme érdekében. Megismerjék a Windows operációs rendszerben található biztonsági segédeszközöket és beállításokat. Képesek legyenek vezeték nélküli eszközök biztonságos beállítására. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Ismeri a malware fogalmát, a kártevő szoftverek típusait, működési elveit.</li>
-          <li>Ismeri a kártevők elleni védekezés lehetőségeit, és képes azokat alkalmazni.</li>
-          <li>Tudja, mi a hálózatok elleni támadások célja, és milyen módszerei vannak.</li>
-          <li>Ismeri a megtévesztési technikák (social engineering) jellemzőit, képes felismerni azokat.</li>
-          <li>Tisztában van a biztonsági házirendek jelentőségével.</li>
-          <li>Képes adatmentéseket végezni, a megfelelő típus kiválasztásával.</li>
-          <li>Képes fájlok és mappák jogosultságainak, illetve titkosításának beállítására.</li>
-          <li>Képes adatok biztonságos törlésére a teljes megsemmisítés céljából.</li>
-          <li>Képes a számítógép védelmét jelszavakkal fokozni: BIOS, felhasználói jelszavak.</li>
-          <li>Képes korlátozások beállítására a Windows helyi házirendjei segítségével.</li>
-          <li>Tud felhasználókat és csoportokat létrehozni, módosítani, törölni.</li>
-          <li>Tudja módosítani a Windows tűzfal beállításait.</li>
-          <li>Ismeri és tudja alkalmazni az elterjedtebb webböngészők biztonsági beállításait (pl. privát böngészés).</li>
-          <li>Tudja telepíteni az operációs rendszer hibajavításait és frissítéseit.</li>
-          <li>Képes hitelesítés és titkosítás konfigurálására vezeték nélküli eszközökön.</li>
-          <li>Képes a firmware frissítésére SOHO forgalomirányítókon.</li>
-          <li>Képes port-továbbítás beállítására SOHO routeren.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a malware fogalmát, a kártevő szoftverek típusait, működési elveit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a kártevők elleni védekezés lehetőségeit, és képes azokat alkalmazni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, mi a hálózatok elleni támadások célja, és milyen módszerei vannak.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a megtévesztési technikák (social engineering) jellemzőit, képes felismerni azokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a biztonsági házirendek jelentőségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes adatmentéseket végezni, a megfelelő típus kiválasztásával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes fájlok és mappák jogosultságainak, illetve titkosításának beállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes adatok biztonságos törlésére a teljes megsemmisítés céljából.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a számítógép védelmét jelszavakkal fokozni: BIOS, felhasználói jelszavak.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes korlátozások beállítására a Windows helyi házirendjei segítségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tud felhasználókat és csoportokat létrehozni, módosítani, törölni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja módosítani a Windows tűzfal beállításait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri és tudja alkalmazni az elterjedtebb webböngészők biztonsági beállításait (pl. privát böngészés).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja telepíteni az operációs rendszer hibajavításait és frissítéseit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes hitelesítés és titkosítás konfigurálására vezeték nélküli eszközökön.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a firmware frissítésére SOHO forgalomirányítókon.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes port-továbbítás beállítására SOHO routeren.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
